# code_genie

./: .gitignore  121.7亿语料纯单字频.txt  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  config.toml.example  input-division.txt  input-fixed.txt  input-roots.txt  input-simple.txt  key_distribution.txt  pair_equivalence.txt  模拟退火算法教程.md
src/: annealing.rs  calibrate.rs  checkpoint.rs  config.rs  context.rs  evaluator.rs  keysoul.rs  loader.rs  main.rs  output.rs  schedule.rs  simple.rs  types.rs  validate.rs
src/amhb/: mod.rs  operator_pool.rs  operators.rs  optimizer.rs  worker.rs
